[package]
name = "hok-lottery-yew"
version = "0.1.0"
edition = "2021"
description = "A hok lottery yew frontend project."
readme = "README.md"
repository = "https://github.com/weiraneve/hok-lottery-yew"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }